added teams handlers
